--- a/.github/workflows/build-maven.yml
+++ b/.github/workflows/build-maven.yml
@@ -9,6 +9,7 @@
 name: Java CI with Maven
 
 on:
+  workflow_dispatch:
   push:
     branches: [ "main" ]
   pull_request:
@@ -35,11 +36,26 @@ jobs:
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
 
     - name: Sonatype Lifecycle SCA Scan
-      uses: sonatype-nexus-community/iq-github-action@master
+      # if: github.repository_owner == 'finos'
+      id: evaluate
+      uses: sonatype/actions/evaluate@v1
       with:
+        iq-server-url: https://iq.aplattel.ngrok.io/
         username: admin
         password: admin!23
-        serverUrl: https://iq.aplattel.ngrok.io/
-        applicationId: Github_SCA__acpcreation
-        stage: build
-        target: .
+        application-id: Github-SCA
+        stage: "build"
+        scan-targets: .
+
+    - name: Save Sonatype SBOM
+      if: steps.evaluate.outputs.scan-id && always() 
+      uses: sonatype/actions/fetch-sbom@v1
+      with:
+        iq-server-url: https://iq.aplattel.ngrok.io/
+        username: admin
+        password: admin!23
+        application-id: Github-SCA
+        scan-id: ${{ steps.evaluate.outputs.scan-id }}
+        sbom-standard: spdx
+        sbom-version: 2.3
+        artifact-name: sonatype-bom
