--- a/.github/workflows/build-maven.yml
+++ b/.github/workflows/build-maven.yml
@@ -60,3 +60,10 @@ jobs:
         sbom-standard: spdx
         sbom-version: 2.3
         artifact-name: sonatype-bom
+
+    - name: Upload Sonatype SBOM (SPDX)
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: target
+        path: target/struts2-rest-showcase.war
