--- a/.github/workflows/build-and-scan.yml
+++ b/.github/workflows/build-and-scan.yml
@@ -17,53 +17,61 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
+    
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: '1.8'
         distribution: 'adopt'
         cache: maven
+      
     - name: Build with Maven
       run: mvn clean package
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    # - name: Sonatype Lifecycle SCA Scan
+    #   id: evaluate
+    #   uses: sonatype/actions/evaluate@v1
+    #   with:
+    #     iq-server-url: https://iq.aplattel.ngrok.io/
+    #     username: admin
+    #     password: admin!23
+    #     application-id: Github-SCA
+    #     stage: "build"
+    #     scan-targets: .
+    #     upload-sarif-file: true
 
-    - name: Sonatype Lifecycle SCA Scan
-      # if: github.repository_owner == 'finos'
-      id: evaluate
-      uses: sonatype/actions/evaluate@v1
-      with:
-        iq-server-url: https://iq.aplattel.ngrok.io/
-        username: admin
-        password: admin!23
-        application-id: Github-SCA
-        stage: "build"
-        scan-targets: .
-        upload-sarif-file: true
+    # - name: Save Sonatype SBOM
+    #   if: steps.evaluate.outputs.scan-id
+    #   uses: sonatype/actions/fetch-sbom@v1
+    #   with:
+    #     iq-server-url: https://iq.aplattel.ngrok.io/
+    #     username: admin
+    #     password: admin!23
+    #     application-id: Github-SCA
+    #     scan-id: ${{ steps.evaluate.outputs.scan-id }}
+    #     sbom-standard: spdx
+    #     sbom-version: 2.3
+    #     artifact-name: sonatype-bom
 
-    - name: Save Sonatype SBOM
-      if: steps.evaluate.outputs.scan-id && always() 
-      uses: sonatype/actions/fetch-sbom@v1
-      with:
-        iq-server-url: https://iq.aplattel.ngrok.io/
-        username: admin
-        password: admin!23
-        application-id: Github-SCA
-        scan-id: ${{ steps.evaluate.outputs.scan-id }}
-        sbom-standard: spdx
-        sbom-version: 2.3
-        artifact-name: sonatype-bom
+    # - name: Upload Struts WAR
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #     name: target
+    #     path: target/struts2-rest-showcase.war
 
-    - name: Upload Sonatype SBOM (SPDX)
+    - name: Run Fortify SSC SAST Scan
       if: always()
-      uses: actions/upload-artifact@v4
+      uses: fortify/github-action@v1
       with:
-        name: target
-        path: target/struts2-rest-showcase.war
+        sast-scan: true
+        debricked-sca-scan: false
+      env:
+        SSC_URL: https://repo.aplattel.ngrok.io
+        SSC_TOKEN: ${{secrets.SSC_TOKEN}}
+        SC_SAST_TOKEN: ${{secrets.SC_SAST_CLIENT_AUTH_TOKEN}}
+        SSC_APPVERSION: GitHub-SCA:struts
+      
